deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp
  namespace: demopipeline
spec:
  selector:
    matchLabels:
      app: reactapp
  replicas: 5
  template:
    metadata:
      labels:
        app: reactapp
    spec:
      containers:
        - name: imageidentificationcon
          image: quayhpe-quay-openshift-operators.apps.ocp02.anpslab.com/hpe/imageidentiication:0.2.0
          ports:
            - containerPort: 3000
