deployment_angular.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactapp
  namespace: imageadentificationapplication
spec:
  selector:
    matchLabels:
      app: reactapp
  replicas: 5
  template:
    metadata:
      labels:
        app: reactapp
    spec:
      containers:
        - name: imageidentificationcon
          image: sumithpe/imagefrontidentification:66
          ports:
            - containerPort: 3000
