deployment_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapiapp
  namespace: imageidentification
spec:
  selector:
    matchLabels:
      app: fastapiapp
  replicas: 3
  template:
    metadata:
      labels:
        app: fastapiapp
    spec:
      containers:
        - name: imageidentificationconbackend
          image: sumithpe/imagebackidentification:24
          ports:
            - containerPort: 8000
