service_angular.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactservice
  namespace: imageidentification
spec:
  selector:
    app: reactapp
  ports:
    - targetPort: 3000
      protocol: TCP
      port: 3000
