service_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapiservice
  namespace: imageadentificationapplication
spec:
  selector:
    app: fastapiapp
  
  ports:
    - targetPort: 8000
      protocol: TCP
      port: 8000
