route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: imageidentificationroute
  namespace: quaytest
  labels:
    app.kubernetes.io/instance: imageidentificationquay1
spec:
  host: imageidentification-quaytest.apps.hpeopenshift.eastus.aroapp.io
  to:
    kind: Service
    name: reactservice
  port:
    targetPort: 3000
